objects/Issue_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Issue Notes</relationshipLabel>
        <relationshipName>Issue_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Notes__c</fullName>
        <label>Issue Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Eval</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issue Notes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Issue-{0000}</displayFormat>
        <label>Issue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Issue_Notes_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>(ISCHANGED( Issue_Type__c )|| NOT(ISBLANK(Issue_Type__c ))) &amp;&amp; ( ISNEW() ) &amp;&amp;  ISBLANK(Issue_Notes__c )</errorConditionFormula>
        <errorMessage>Issue Note is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Issue_Type_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>(ISCHANGED( Issue_Notes__c )|| NOT(ISBLANK(Issue_Notes__c ))) &amp;&amp;  ISNEW() &amp;&amp; ISBLANK(Issue_Type__c )
|| (ISBLANK(Issue_Type__c )&amp;&amp;NOT(ISBLANK(Issue_Notes__c )))</errorConditionFormula>
        <errorMessage>Issue Type is required</errorMessage>
    </validationRules>
</CustomObject>